// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block \`triangle="hide"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-block block-picker"
    style="width: 170px; background: rgb(255, 255, 255); -webkit-box-shadow: 0 1px rgba(0,0,0,.1); box-shadow: 0 1px rgba(0,0,0,.1); -webkit-border-radius: 6px; border-radius: 6px; position: relative;"
  >
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px; border-color: transparent transparent rgb(34, 25, 77); position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
    />
    <div
      style="height: 110px; background: rgb(34, 25, 77); -webkit-border-radius: 6px 6px 0 0; border-radius: 6px 6px 0 0; display: flex; align-items: center; -webkit-justify-content: center; justify-content: center; position: relative;"
    >
      <div
        style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
      >
        #22194d
      </div>
    </div>
    <div
      style="padding: 10px;"
    >
      <div
        style="margin-right: -10px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(217, 227, 240); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#D9E3F0"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(244, 115, 115); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#F47373"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(105, 118, 137); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#697689"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(55, 214, 122); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#37D67A"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(44, 204, 228); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#2CCCE4"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(85, 85, 85); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#555555"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(220, 231, 117); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#dce775"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(255, 138, 101); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#ff8a65"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(186, 104, 200); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#ba68c8"
          />
        </span>
        <div
          style="clear: both;"
        />
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-4"
          spellcheck="false"
          style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; -webkit-box-shadow: inset 0 0 0 1px #ddd; box-shadow: inset 0 0 0 1px #ddd; -webkit-border-radius: 4px; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
          value="#22194D"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Block renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-block block-picker"
    style="width: 170px; background: rgb(255, 255, 255); -webkit-box-shadow: 0 1px rgba(0,0,0,.1); box-shadow: 0 1px rgba(0,0,0,.1); -webkit-border-radius: 6px; border-radius: 6px; position: relative;"
  >
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px; border-color: transparent transparent rgb(34, 25, 77); position: absolute; top: -10px; left: 50%; margin-left: -10px;"
    />
    <div
      style="height: 110px; background: rgb(34, 25, 77); -webkit-border-radius: 6px 6px 0 0; border-radius: 6px 6px 0 0; display: flex; align-items: center; -webkit-justify-content: center; justify-content: center; position: relative;"
    >
      <div
        style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
      >
        #22194d
      </div>
    </div>
    <div
      style="padding: 10px;"
    >
      <div
        style="margin-right: -10px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(217, 227, 240); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#D9E3F0"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(244, 115, 115); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#F47373"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(105, 118, 137); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#697689"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(55, 214, 122); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#37D67A"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(44, 204, 228); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#2CCCE4"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(85, 85, 85); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#555555"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(220, 231, 117); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#dce775"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(255, 138, 101); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#ff8a65"
          />
        </span>
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(186, 104, 200); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
            tabindex="0"
            title="#ba68c8"
          />
        </span>
        <div
          style="clear: both;"
        />
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-1"
          spellcheck="false"
          style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; -webkit-box-shadow: inset 0 0 0 1px #ddd; box-shadow: inset 0 0 0 1px #ddd; -webkit-border-radius: 4px; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
          value="#22194D"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockSwatches renders correctly 1`] = `
<DocumentFragment>
  <div
    style="margin-right: -10px;"
  >
    <span>
      <div
        class="rc-swatch"
        style="background: rgb(255, 255, 255); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
        tabindex="0"
        title="#fff"
      />
    </span>
    <span>
      <div
        class="rc-swatch"
        style="background: rgb(153, 153, 153); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
        tabindex="0"
        title="#999"
      />
    </span>
    <span>
      <div
        class="rc-swatch"
        style="background: rgb(0, 0, 0); width: 22px; height: 22px; float: left; margin-right: 10px; margin-bottom: 10px; -webkit-border-radius: 4px; border-radius: 4px;"
        tabindex="0"
        title="#000"
      />
    </span>
    <div
      style="clear: both;"
    />
  </div>
</DocumentFragment>
`;
